# dnd-combat-sim

./: README.md  pyproject.toml  run_combat.py  start_app.py
dnd_combat_sim/: __init__.py  actions.py  attack.py  attacks.csv  attacks.py  battle.py  conditions.py  creature.py  dice.py  encounter.py  game.py  log.py  monsters.csv  rules.py  trait.py  traits.py  utils.py  weapon.py  weapons.csv  weapons.py
dnd_combat_sim/content/: attacks.csv  monsters.csv  weapons.csv
dnd_combat_sim/frontend/: app.py
dnd_combat_sim/monsters/: __init__.py  beasts.py  constructs.py  goblinoids.py  humanoids.py  monstrosities.py  other_humanoids.py  undead.py
dnd_combat_sim/traits/: __init__.py  attack_traits.py  creature_traits.py  trait.py  weapon_traits.py
tests/: test_attack.py  test_combat.py  test_creature.py  test_traits.py  test_weapon.py
