[tool.poetry]
name = "dnd-combat-sim"
version = "0.1.0"
description = "Combat simulator for the world's greatest tabletop roleplaying game: Duungeons & Dragons 5e"
authors = ["David Norrish <norrish.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
dash = "^2.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.3.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
