[tool.poetry]
name = "dnd-combat-sim"
version = "0.1.0"
description = "Combat simulator for the world's greatest tabletop roleplaying game: Duungeons & Dragons 5e"
authors = ["David Norrish <norrish.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
dash = "^2.16.1"
dash-bootstrap-components = "^1.5.0"
pandas = "^2.2.1"
plotly = "^5.20.0"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
pdbpp = "^0.10.3"
pytest = "^8.0.2"
ruff = "^0.3.1"

[tool.pylint."MESSAGES CONTROL"]
disable = "logging-fstring-interpolation"
max-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
